# hex0-rs

./: .gitignore  README.md  run.sh
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
