[package]
version = "0.1.0"
name = "hex0-script"
edition = "2021"
default-run = "hex0"

[[bin]]
name = "hex0"
path = "src/bin/main.rs"

#[[bin]]
#name = "evm"
#path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "5.0.8"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
hex0-lib = { path = "../lib" }
dotenv = "0.15.0"
sha2 = "0.10.9"

[build-dependencies]
sp1-build = "5.0.8"
